--- a/templates/ngrok.yml.j2
+++ b/templates/ngrok.yml.j2
@@ -7,9 +7,9 @@ tunnels:
   {{ site }}-tls:
     hostname: {{ site }}.{{ ngrok_dn_suffix }}
     proto: tls
-    addr: 443
+    addr: {% if ngrok_app == 'apache2' %}443{% elif ngrok_app == 'tomcat' %}8443{% endif %}
   {{ site }}-http:
     hostname: {{ site }}.{{ ngrok_dn_suffix }}
     proto: http
-    addr: 80
+    addr: {% if ngrok_app == 'apache2' %}80{% elif ngrok_app == 'tomcat' %}8080{% endif %}
 {% endfor %}
