Quote values in config file to allow for wildcards

--- a/templates/ngrok.yml.j2
+++ b/templates/ngrok.yml.j2
@@ -4,8 +4,8 @@ log_level: debug
 log: {{ ngrok_dir }}/log/ngrok.log
 tunnels:
 {% for tunnel in tunnels %}
-  {{ tunnel.name }}-{{ tunnel.proto }}:
-    hostname: {{ tunnel.name }}.{{ tunnel.dn_suffix }}
+  "{{ tunnel.name }}-{{ tunnel.proto }}":
+    hostname: "{{ tunnel.name }}.{{ tunnel.dn_suffix }}"
     proto: {{ tunnel.proto }}
     addr: {{ tunnel.port }}
 {% endfor %}
